--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.shapeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.shapeloadoptions.yml
@@ -1,43 +1,43 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions:interface'
     summary: |-
-      代表工作表中的一个通用 shape 对象。 一个形状可以是一个几何形状、一条线、一组形状, 等等。
+      代表工作表中的一个通用 shape 对象。 一个形状可以是一个几何形状、一条线、一组形状，等等。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ShapeLoadOptions
     fullName: Excel.Interfaces.ShapeLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ShapeLoadOptions.$all
-      - excel.Excel.Interfaces.ShapeLoadOptions.altTextDescription
-      - excel.Excel.Interfaces.ShapeLoadOptions.altTextTitle
-      - excel.Excel.Interfaces.ShapeLoadOptions.connectionSiteCount
-      - excel.Excel.Interfaces.ShapeLoadOptions.fill
-      - excel.Excel.Interfaces.ShapeLoadOptions.geometricShape
-      - excel.Excel.Interfaces.ShapeLoadOptions.geometricShapeType
-      - excel.Excel.Interfaces.ShapeLoadOptions.group
-      - excel.Excel.Interfaces.ShapeLoadOptions.height
-      - excel.Excel.Interfaces.ShapeLoadOptions.id
-      - excel.Excel.Interfaces.ShapeLoadOptions.image
-      - excel.Excel.Interfaces.ShapeLoadOptions.left
-      - excel.Excel.Interfaces.ShapeLoadOptions.level
-      - excel.Excel.Interfaces.ShapeLoadOptions.line
-      - excel.Excel.Interfaces.ShapeLoadOptions.lineFormat
-      - excel.Excel.Interfaces.ShapeLoadOptions.lockAspectRatio
-      - excel.Excel.Interfaces.ShapeLoadOptions.name
-      - excel.Excel.Interfaces.ShapeLoadOptions.parentGroup
-      - excel.Excel.Interfaces.ShapeLoadOptions.rotation
-      - excel.Excel.Interfaces.ShapeLoadOptions.textFrame
-      - excel.Excel.Interfaces.ShapeLoadOptions.top
-      - excel.Excel.Interfaces.ShapeLoadOptions.type
-      - excel.Excel.Interfaces.ShapeLoadOptions.visible
-      - excel.Excel.Interfaces.ShapeLoadOptions.width
-      - excel.Excel.Interfaces.ShapeLoadOptions.zOrderPosition
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.$all
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#altTextDescription:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#altTextTitle:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#connectionSiteCount:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#fill:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#geometricShape:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#geometricShapeType:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#group:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#height:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#id:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#image:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#left:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#level:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#line:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#lineFormat:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#lockAspectRatio:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#name:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#parentGroup:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#rotation:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#textFrame:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#top:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#type:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#visible:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#width:member'
+      - 'excel!Excel.Interfaces.ShapeLoadOptions#zOrderPosition:member'
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -48,11 +48,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.altTextDescription
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#altTextDescription:member'
     summary: |-
       返回或设置形状对象的可选说明文本。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: altTextDescription
     fullName: altTextDescription
     langs:
@@ -63,11 +63,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.altTextTitle
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#altTextTitle:member'
     summary: |-
       返回或设置形状对象的可选标题文本。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: altTextTitle
     fullName: altTextTitle
     langs:
@@ -78,11 +78,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.connectionSiteCount
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#connectionSiteCount:member'
     summary: |-
       返回此形状上的连接站点数。 只读。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: connectionSiteCount
     fullName: connectionSiteCount
     langs:
@@ -93,11 +93,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.fill
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#fill:member'
     summary: |-
       返回此形状的填充格式。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -107,12 +107,12 @@ items:
       content: 'fill?: Excel.Interfaces.ShapeFillLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ShapeFillLoadOptions
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.geometricShape
+          - 'excel!Excel.Interfaces.ShapeFillLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#geometricShape:member'
     summary: |-
       返回与形状关联的几何形状。 如果形状类型不是“GeometricShape”，则会引发错误。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: geometricShape
     fullName: geometricShape
     langs:
@@ -122,12 +122,12 @@ items:
       content: 'geometricShape?: Excel.Interfaces.GeometricShapeLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.GeometricShapeLoadOptions
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.geometricShapeType
+          - 'excel!Excel.Interfaces.GeometricShapeLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#geometricShapeType:member'
     summary: |-
       表示此几何形状的几何形状类型。 有关详细信息，请参阅 Excel.GeometricShapeType。 如果形状类型不是“GeometricShape”，返回 NULL。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: geometricShapeType
     fullName: geometricShapeType
     langs:
@@ -138,11 +138,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.group
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#group:member'
     summary: |-
       返回与形状关联的形状组。 如果形状类型不是“GroupShape”，则会引发错误。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: group
     fullName: group
     langs:
@@ -152,12 +152,12 @@ items:
       content: 'group?: Excel.Interfaces.ShapeGroupLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ShapeGroupLoadOptions
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.height
+          - 'excel!Excel.Interfaces.ShapeGroupLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#height:member'
     summary: |-
-      表示形状的高度（以磅为单位）。 当设置为负值或零作为输入时, 将引发无效参数异常。
+      表示形状的高度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -168,11 +168,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.id
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#id:member'
     summary: |-
       表示形状标识符。 只读。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -183,11 +183,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.image
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#image:member'
     summary: |-
       返回与形状关联的图像。 如果形状类型不是“Image”，则会引发错误。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: image
     fullName: image
     langs:
@@ -197,12 +197,12 @@ items:
       content: 'image?: Excel.Interfaces.ImageLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ImageLoadOptions
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.left
+          - 'excel!Excel.Interfaces.ImageLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#left:member'
     summary: |-
-      从形状左侧到工作表左侧的距离（以磅为单位）。 当设置为负值作为输入时, 将引发无效参数异常。
+      从形状左侧到工作表左侧的距离（以磅为单位）。 当设置为负值作为输入时，将引发无效参数异常。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -213,11 +213,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.level
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#level:member'
     summary: |-
       表示指定形状的级别。 例如，级别 0 表示形状不是任何组的一部分，级别 1 表示形状是顶级组的一部分，级别 2 表示形状是顶级子组的一部分。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: level
     fullName: level
     langs:
@@ -228,11 +228,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.line
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#line:member'
     summary: |-
       返回与形状关联的线条。 如果形状类型不是“Line”，则会引发错误。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: line
     fullName: line
     langs:
@@ -242,12 +242,12 @@ items:
       content: 'line?: Excel.Interfaces.LineLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.LineLoadOptions
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.lineFormat
+          - 'excel!Excel.Interfaces.LineLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#lineFormat:member'
     summary: |-
       返回此形状的线条格式。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lineFormat
     fullName: lineFormat
     langs:
@@ -257,12 +257,12 @@ items:
       content: 'lineFormat?: Excel.Interfaces.ShapeLineFormatLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ShapeLineFormatLoadOptions
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.lockAspectRatio
+          - 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#lockAspectRatio:member'
     summary: |-
       指定此形状的纵横比是否锁定。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lockAspectRatio
     fullName: lockAspectRatio
     langs:
@@ -273,11 +273,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.name
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#name:member'
     summary: |-
       表示形状的名称。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -288,11 +288,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.parentGroup
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#parentGroup:member'
     summary: |-
       表示此形状的父组。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: parentGroup
     fullName: parentGroup
     langs:
@@ -302,12 +302,12 @@ items:
       content: 'parentGroup?: Excel.Interfaces.ShapeLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ShapeLoadOptions
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.rotation
+          - 'excel!Excel.Interfaces.ShapeLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#rotation:member'
     summary: |-
       表示形状的旋转度数。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rotation
     fullName: rotation
     langs:
@@ -318,11 +318,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.textFrame
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#textFrame:member'
     summary: |-
       返回此形状的文本框对象。 只读。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textFrame
     fullName: textFrame
     langs:
@@ -332,12 +332,12 @@ items:
       content: 'textFrame?: Excel.Interfaces.TextFrameLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.TextFrameLoadOptions
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.top
+          - 'excel!Excel.Interfaces.TextFrameLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#top:member'
     summary: |-
-      从形状上边缘到工作表上边缘之间的距离（以磅为单位）。 当设置为负值作为输入时, 将引发无效参数异常。
+      从形状上边缘到工作表上边缘之间的距离（以磅为单位）。 当设置为负值作为输入时，将引发无效参数异常。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -348,11 +348,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.type
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#type:member'
     summary: |-
       返回此形状的类型。 有关详细信息，请参阅 Excel.ShapeType。 只读。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -363,11 +363,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.visible
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#visible:member'
     summary: |-
       表示此形状的可视性。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -378,11 +378,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.width
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#width:member'
     summary: |-
-      表示形状的宽度（以磅为单位）。 当设置为负值或零作为输入时, 将引发无效参数异常。
+      表示形状的宽度（以磅为单位）。 当设置为负值或零作为输入时，将引发无效参数异常。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
@@ -393,11 +393,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ShapeLoadOptions.zOrderPosition
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions#zOrderPosition:member'
     summary: |-
       返回指定形状在 z 顺序中的位置，0 表示顺序堆栈的底部。 只读。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: zOrderPosition
     fullName: zOrderPosition
     langs:
@@ -408,3 +408,20 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'excel!Excel.Interfaces.ShapeFillLoadOptions:interface'
+    name: Excel.Interfaces.ShapeFillLoadOptions
+  - uid: 'excel!Excel.Interfaces.GeometricShapeLoadOptions:interface'
+    name: Excel.Interfaces.GeometricShapeLoadOptions
+  - uid: 'excel!Excel.Interfaces.ShapeGroupLoadOptions:interface'
+    name: Excel.Interfaces.ShapeGroupLoadOptions
+  - uid: 'excel!Excel.Interfaces.ImageLoadOptions:interface'
+    name: Excel.Interfaces.ImageLoadOptions
+  - uid: 'excel!Excel.Interfaces.LineLoadOptions:interface'
+    name: Excel.Interfaces.LineLoadOptions
+  - uid: 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions:interface'
+    name: Excel.Interfaces.ShapeLineFormatLoadOptions
+  - uid: 'excel!Excel.Interfaces.ShapeLoadOptions:interface'
+    name: Excel.Interfaces.ShapeLoadOptions
+  - uid: 'excel!Excel.Interfaces.TextFrameLoadOptions:interface'
+    name: Excel.Interfaces.TextFrameLoadOptions
